feat(i18n): complete Dashboard and Profile translation - Phase 2 100%
 MemberDashboard: Custom date formatting, status badges, all sections translated
 MyProfile: All 4 tabs, membership history modal, custom date processing
 ClassDetailsModal: All sections, difficulty levels, booking states translated

Added 54 new translations (18 keys × 3 languages)
Total: 650+ translation keys across az/ru/en

Custom date formatting: '26 okt, 2025' (az/ru) vs 'Oct 26, 2025' (en)
User tested and confirmed working in all 3 languages

--- a/frontend/public/locales/az/translation.json
+++ b/frontend/public/locales/az/translation.json
@@ -19,6 +19,8 @@
     "yes": "Bəli",
     "no": "Xeyr",
     "details": "Ətraflı",
+    "minutes": "dəqiqə",
+    "completed": "Tamamlandı",
     "sunday": "Bazar",
     "monday": "Bazar ertəsi",
     "tuesday": "Çərşənbə axşamı",
@@ -70,7 +72,13 @@
     "showCheckInCode": "Giriş kodunu göstərmək üçün toxunun",
     "visitsThisMonth": "Bu Ay Ziyarətlər",
     "totalVisits": "Ümumi Ziyarətlər",
-    "upcomingClassesCount": "Gələcək Dərslər"
+    "upcomingClassesCount": "Gələcək Dərslər",
+    "status": {
+      "active": "Aktiv",
+      "inactive": "Qeyri-aktiv",
+      "suspended": "Dayandırılıb",
+      "pending": "Gözləyir"
+    }
   },
   "classes": {
     "title": "Dərslər",
@@ -79,6 +87,67 @@
     "className": "Dərs Adı",
     "instructor": "Məşqçi",
     "with": "ilə",
+    "modal": {
+      "schedule": "Cədvəl",
+      "date": "Tarix",
+      "time": "Vaxt",
+      "description": "Təsvir",
+      "addDescription": "Təsvir əlavə edin",
+      "instructors": "Məşqçilər",
+      "noInstructors": "Məşqçi təyin edilməyib",
+      "equipment": "Avadanlıq",
+      "capacity": "Tutum",
+      "enrolled": "qeydiyyatlı",
+      "spotsLeft": "yer qalıb",
+      "price": "Qiymət",
+      "close": "Bağla",
+      "bookNow": "İndi rezerv et",
+      "booked": "Rezerv edilib (Ləğv etmək üçün toxunun)",
+      "processing": "İşlənir...",
+      "classFull": "Dərs Doludur"
+    },
+    "difficulty": {
+      "beginner": "Başlanğıc",
+      "intermediate": "Orta",
+      "advanced": "İrəliləmiş",
+      "mixed": "Qarışıq"
+    },
+    "weekdays": {
+      "short": {
+        "sun": "Baz",
+        "mon": "B.e",
+        "tue": "Ç.a",
+        "wed": "Çər",
+        "thu": "C.a",
+        "fri": "Cüm",
+        "sat": "Şən"
+      },
+      "long": {
+        "sunday": "Bazar",
+        "monday": "Bazar ertəsi",
+        "tuesday": "Çərşənbə axşamı",
+        "wednesday": "Çərşənbə",
+        "thursday": "Cümə axşamı",
+        "friday": "Cümə",
+        "saturday": "Şənbə"
+      }
+    },
+    "months": {
+      "short": {
+        "jan": "Yan",
+        "feb": "Fev",
+        "mar": "Mar",
+        "apr": "Apr",
+        "may": "May",
+        "jun": "İyn",
+        "jul": "İyl",
+        "aug": "Avq",
+        "sep": "Sen",
+        "oct": "Okt",
+        "nov": "Noy",
+        "dec": "Dek"
+      }
+    },
     "date": "Tarix",
     "time": "Vaxt",
     "duration": "Müddət",
@@ -127,8 +196,14 @@
     "phone": "Telefon",
     "dateOfBirth": "Doğum tarixi",
     "gender": "Cins",
+    "genderOptions": {
+      "select": "Cins seçin",
+      "male": "Kişi",
+      "female": "Qadın",
+      "other": "Digər",
+      "preferNotToSay": "Demək istəmirəm"
+    },
     "membershipType": "Üzvlük Növü",
-    "subscription": "Mənim Abunəliyim",
     "subscriptionStatus": "Abunəlik Statusu",
     "remainingEntries": "Qalan Girişlər",
     "expiryDate": "Bitmə Tarixi",
@@ -140,8 +215,67 @@
     "emergencyContact": "Təcili Əlaqə",
     "emergencyContactName": "Təcili Əlaqə Şəxsinin Adı",
     "emergencyContactPhone": "Təcili Əlaqə Telefonu",
+    "emergencyContactDescription": "Təcili əlaqə məlumatlarınızı yeniləyin (ixtiyari)",
+    "emergencyContactSaved": "Təcili Əlaqə Yadda Saxlanıldı!",
+    "informationUpdated": "Məlumat Yeniləndi!",
+    "backToDashboard": "İdarə Panelinə Qayıt",
     "notificationPreferences": "Bildiriş Parametrləri",
-    "saveSettings": "Bildiriş Parametrlərini Yadda Saxla"
+    "saveSettings": "Bildiriş Parametrlərini Yadda Saxla",
+    "settingsDescription": "Proqram parametrlərinizi və bildirişlərinizi idarə edin",
+    "resetToDefaults": "İlkin Parametrlərə Qaytar",
+    "subscription": {
+      "title": "Mənim Abunəliyim",
+      "active": "Aktiv",
+      "inactive": "Qeyri-aktiv",
+      "suspended": "Dayandırılıb",
+      "expired": "Vaxtı keçib",
+      "cancelled": "Ləğv edilib",
+      "membership": "Üzvlük",
+      "planName": "Plan Adı",
+      "startDate": "Başlama Tarixi",
+      "endDate": "Bitmə Tarixi",
+      "status": "Status",
+      "visitQuota": "Ziyarət Kvotası",
+      "planPrice": "Plan Qiyməti",
+      "notes": "Qeydlər",
+      "suspendedOn": "Dayandırılıb",
+      "registeredOn": "Qeydiyyat Tarixi",
+      "membershipHistory": "Üzvlük Tarixçəsi",
+      "totalRecords": "Ümumi Qeydlər",
+      "memberSince": "Üzv Olub",
+      "classesUsed": "İstifadə Edilən Məşğələlər",
+      "loadingHistory": "Üzvlük tarixçəsi yüklənir...",
+      "noHistory": "Üzvlük Tarixçəsi Yoxdur",
+      "noHistoryDesc": "Hələ heç bir üzvlük qeydiniz yoxdur.",
+      "subscriptionDesc": "Üzvlüyünüzü idarə edin və abunə təfərrüatlarına baxın",
+      "remaining": "qalıb",
+      "perMonth": "ayda",
+      "unlimited": "Limitsiz",
+      "viewHistory": "Tarixçəyə Baxın",
+      "basicMembership": "Əsas Üzvlük",
+      "ongoing": "Davam edir",
+      "duration": "Müddət",
+      "amount": "Məbləğ",
+      "paymentMethod": "Ödəniş Üsulu",
+      "renewalType": "Yeniləmə Növü",
+      "classLimit": "Məşğələ Limiti",
+      "classes": "məşğələ",
+      "free": "Pulsuz"
+    },
+    "notifications": {
+      "pushNotifications": "Push Bildirişləri",
+      "pushNotificationsDesc": "Cihazınızda push bildirişləri alın",
+      "emailNotifications": "E-poçt Bildirişləri",
+      "emailNotificationsDesc": "E-poçt yeniləmələri və elanlar alın",
+      "emailAlerts": "E-poçt Xəbərdarlıqları",
+      "emailAlertsDesc": "E-poçt vasitəsilə bildirişlər alın",
+      "smsAlerts": "SMS Xəbərdarlıqları",
+      "smsAlertsDesc": "Mühüm yeniləmələri SMS ilə alın",
+      "classReminders": "Dərs Xatırlatmaları",
+      "classRemindersDesc": "Planlaşdırılmış dərslərdən əvvəl bildiriş alın",
+      "languageNote": "Dil dəyişiklikləri avtomatik yadda saxlanılır - \"Parametrləri Saxla\" düyməsini klikləməyə ehtiyac yoxdur",
+      "languageLocalization": "Dil və Lokallaşdırma"
+    }
   },
   "announcements": {
     "title": "Elanlar",
