--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -19,6 +19,8 @@
     "yes": "Yes",
     "no": "No",
     "details": "Details",
+    "minutes": "minutes",
+    "completed": "Completed",
     "sunday": "Sunday",
     "monday": "Monday",
     "tuesday": "Tuesday",
@@ -70,7 +72,13 @@
     "showCheckInCode": "Tap to show your check-in code",
     "visitsThisMonth": "Visits This Month",
     "totalVisits": "Total Visits",
-    "upcomingClassesCount": "Upcoming Classes"
+    "upcomingClassesCount": "Upcoming Classes",
+    "status": {
+      "active": "Active",
+      "inactive": "Inactive",
+      "suspended": "Suspended",
+      "pending": "Pending"
+    }
   },
   "classes": {
     "title": "Classes",
@@ -79,6 +87,67 @@
     "className": "Class Name",
     "instructor": "Instructor",
     "with": "with",
+    "modal": {
+      "schedule": "Schedule",
+      "date": "Date",
+      "time": "Time",
+      "description": "Description",
+      "addDescription": "Add description",
+      "instructors": "Instructors",
+      "noInstructors": "No instructors assigned",
+      "equipment": "Equipment",
+      "capacity": "Capacity",
+      "enrolled": "enrolled",
+      "spotsLeft": "spots left",
+      "price": "Price",
+      "close": "Close",
+      "bookNow": "Book Now",
+      "booked": "Booked (Click to Cancel)",
+      "processing": "Processing...",
+      "classFull": "Class Full"
+    },
+    "difficulty": {
+      "beginner": "Beginner",
+      "intermediate": "Intermediate",
+      "advanced": "Advanced",
+      "mixed": "Mixed"
+    },
+    "weekdays": {
+      "short": {
+        "sun": "Sun",
+        "mon": "Mon",
+        "tue": "Tue",
+        "wed": "Wed",
+        "thu": "Thu",
+        "fri": "Fri",
+        "sat": "Sat"
+      },
+      "long": {
+        "sunday": "Sunday",
+        "monday": "Monday",
+        "tuesday": "Tuesday",
+        "wednesday": "Wednesday",
+        "thursday": "Thursday",
+        "friday": "Friday",
+        "saturday": "Saturday"
+      }
+    },
+    "months": {
+      "short": {
+        "jan": "Jan",
+        "feb": "Feb",
+        "mar": "Mar",
+        "apr": "Apr",
+        "may": "May",
+        "jun": "Jun",
+        "jul": "Jul",
+        "aug": "Aug",
+        "sep": "Sep",
+        "oct": "Oct",
+        "nov": "Nov",
+        "dec": "Dec"
+      }
+    },
     "date": "Date",
     "time": "Time",
     "duration": "Duration",
@@ -127,8 +196,14 @@
     "phone": "Phone",
     "dateOfBirth": "Date of Birth",
     "gender": "Gender",
+    "genderOptions": {
+      "select": "Select Gender",
+      "male": "Male",
+      "female": "Female",
+      "other": "Other",
+      "preferNotToSay": "Prefer not to say"
+    },
     "membershipType": "Membership Type",
-    "subscription": "My Subscription",
     "subscriptionStatus": "Subscription Status",
     "remainingEntries": "Remaining Entries",
     "expiryDate": "Expiry Date",
@@ -140,8 +215,67 @@
     "emergencyContact": "Emergency Contact",
     "emergencyContactName": "Emergency Contact Name",
     "emergencyContactPhone": "Emergency Contact Phone",
+    "emergencyContactDescription": "Update your emergency contact information (optional)",
+    "emergencyContactSaved": "Emergency Contact Saved!",
+    "informationUpdated": "Information Updated!",
+    "backToDashboard": "Back to Dashboard",
     "notificationPreferences": "Notification Preferences",
-    "saveSettings": "Save Notification Preferences"
+    "saveSettings": "Save Notification Preferences",
+    "settingsDescription": "Manage your app settings and notifications",
+    "resetToDefaults": "Reset to Defaults",
+    "subscription": {
+      "title": "My Subscription",
+      "active": "Active",
+      "inactive": "Inactive",
+      "suspended": "Suspended",
+      "expired": "Expired",
+      "cancelled": "Cancelled",
+      "membership": "Membership",
+      "planName": "Plan Name",
+      "startDate": "Start Date",
+      "endDate": "End Date",
+      "status": "Status",
+      "visitQuota": "Visit Quota",
+      "planPrice": "Plan Price",
+      "notes": "Notes",
+      "suspendedOn": "Suspended on",
+      "registeredOn": "Registered On",
+      "membershipHistory": "Membership History",
+      "totalRecords": "Total Records",
+      "memberSince": "Member Since",
+      "classesUsed": "Classes Used",
+      "loadingHistory": "Loading membership history...",
+      "noHistory": "No Membership History",
+      "noHistoryDesc": "You don't have any membership records yet.",
+      "subscriptionDesc": "Manage your membership and view subscription details",
+      "remaining": "remaining",
+      "perMonth": "per month",
+      "unlimited": "Unlimited",
+      "viewHistory": "View History",
+      "basicMembership": "Basic Membership",
+      "ongoing": "Ongoing",
+      "duration": "Duration",
+      "amount": "Amount",
+      "paymentMethod": "Payment Method",
+      "renewalType": "Renewal Type",
+      "classLimit": "Class Limit",
+      "classes": "classes",
+      "free": "Free"
+    },
+    "notifications": {
+      "pushNotifications": "Push Notifications",
+      "pushNotificationsDesc": "Receive push notifications on your device",
+      "emailNotifications": "Email Notifications",
+      "emailNotificationsDesc": "Receive email updates and announcements",
+      "emailAlerts": "Email Alerts",
+      "emailAlertsDesc": "Receive notifications via email",
+      "smsAlerts": "SMS Alerts",
+      "smsAlertsDesc": "Receive important updates via SMS",
+      "classReminders": "Class Reminders",
+      "classRemindersDesc": "Get notified before your scheduled classes",
+      "languageNote": "Language changes are saved automatically - no need to click \"Save Settings\"",
+      "languageLocalization": "Language & Localization"
+    }
   },
   "announcements": {
     "title": "Announcements",
