--- a/frontend/public/locales/ru/translation.json
+++ b/frontend/public/locales/ru/translation.json
@@ -18,7 +18,9 @@
     "confirm": "Подтвердить",
     "yes": "Да",
     "no": "Нет",
-    "details": "Подробнее",
+    "details": "Подробности",
+    "minutes": "минуты",
+    "completed": "Завершено",
     "sunday": "Воскресенье",
     "monday": "Понедельник",
     "tuesday": "Вторник",
@@ -70,7 +72,13 @@
     "showCheckInCode": "Нажмите, чтобы показать код регистрации",
     "visitsThisMonth": "Посещений в этом месяце",
     "totalVisits": "Всего посещений",
-    "upcomingClassesCount": "Предстоящие занятия"
+    "upcomingClassesCount": "Предстоящие занятия",
+    "status": {
+      "active": "Активный",
+      "inactive": "Неактивный",
+      "suspended": "Приостановлен",
+      "pending": "В ожидании"
+    }
   },
   "classes": {
     "title": "Занятия",
@@ -79,6 +87,67 @@
     "className": "Название занятия",
     "instructor": "Инструктор",
     "with": "с",
+    "modal": {
+      "schedule": "Расписание",
+      "date": "Дата",
+      "time": "Время",
+      "description": "Описание",
+      "addDescription": "Добавить описание",
+      "instructors": "Инструкторы",
+      "noInstructors": "Инструкторы не назначены",
+      "equipment": "Оборудование",
+      "capacity": "Вместимость",
+      "enrolled": "записано",
+      "spotsLeft": "мест осталось",
+      "price": "Цена",
+      "close": "Закрыть",
+      "bookNow": "Забронировать",
+      "booked": "Забронировано (Нажмите для отмены)",
+      "processing": "Обработка...",
+      "classFull": "Группа заполнена"
+    },
+    "difficulty": {
+      "beginner": "Начинающий",
+      "intermediate": "Средний",
+      "advanced": "Продвинутый",
+      "mixed": "Смешанный"
+    },
+    "weekdays": {
+      "short": {
+        "sun": "Вс",
+        "mon": "Пн",
+        "tue": "Вт",
+        "wed": "Ср",
+        "thu": "Чт",
+        "fri": "Пт",
+        "sat": "Сб"
+      },
+      "long": {
+        "sunday": "Воскресенье",
+        "monday": "Понедельник",
+        "tuesday": "Вторник",
+        "wednesday": "Среда",
+        "thursday": "Четверг",
+        "friday": "Пятница",
+        "saturday": "Суббота"
+      }
+    },
+    "months": {
+      "short": {
+        "jan": "Янв",
+        "feb": "Фев",
+        "mar": "Мар",
+        "apr": "Апр",
+        "may": "Май",
+        "jun": "Июн",
+        "jul": "Июл",
+        "aug": "Авг",
+        "sep": "Сен",
+        "oct": "Окт",
+        "nov": "Ноя",
+        "dec": "Дек"
+      }
+    },
     "date": "Дата",
     "time": "Время",
     "duration": "Продолжительность",
@@ -127,8 +196,14 @@
     "phone": "Телефон",
     "dateOfBirth": "Дата рождения",
     "gender": "Пол",
+    "genderOptions": {
+      "select": "Выберите пол",
+      "male": "Мужской",
+      "female": "Женский",
+      "other": "Другой",
+      "preferNotToSay": "Предпочитаю не указывать"
+    },
     "membershipType": "Тип членства",
-    "subscription": "Моя подписка",
     "subscriptionStatus": "Статус подписки",
     "remainingEntries": "Осталось посещений",
     "expiryDate": "Дата окончания",
@@ -140,8 +215,67 @@
     "emergencyContact": "Экстренный контакт",
     "emergencyContactName": "Имя экстренного контакта",
     "emergencyContactPhone": "Телефон экстренного контакта",
+    "emergencyContactDescription": "Обновите информацию экстренного контакта (необязательно)",
+    "emergencyContactSaved": "Экстренный контакт сохранен!",
+    "informationUpdated": "Информация обновлена!",
+    "backToDashboard": "Вернуться к панели управления",
     "notificationPreferences": "Настройки уведомлений",
-    "saveSettings": "Сохранить настройки"
+    "saveSettings": "Сохранить настройки",
+    "settingsDescription": "Управляйте настройками приложения и уведомлениями",
+    "resetToDefaults": "Сбросить к настройкам по умолчанию",
+    "subscription": {
+      "title": "Моя подписка",
+      "active": "Активный",
+      "inactive": "Неактивный",
+      "suspended": "Приостановлен",
+      "expired": "Истек",
+      "cancelled": "Отменен",
+      "membership": "Членство",
+      "planName": "Название плана",
+      "startDate": "Дата начала",
+      "endDate": "Дата окончания",
+      "status": "Статус",
+      "visitQuota": "Квота посещений",
+      "planPrice": "Стоимость плана",
+      "notes": "Заметки",
+      "suspendedOn": "Приостановлено",
+      "registeredOn": "Зарегистрирован",
+      "membershipHistory": "История членства",
+      "totalRecords": "Всего записей",
+      "memberSince": "Член с",
+      "classesUsed": "Использовано занятий",
+      "loadingHistory": "Загрузка истории членства...",
+      "noHistory": "Нет истории членства",
+      "noHistoryDesc": "У вас пока нет записей о членстве.",
+      "subscriptionDesc": "Управляйте своим членством и просматривайте детали подписки",
+      "remaining": "осталось",
+      "perMonth": "в месяц",
+      "unlimited": "Неограниченно",
+      "viewHistory": "Просмотреть историю",
+      "basicMembership": "Базовое членство",
+      "ongoing": "Продолжается",
+      "duration": "Длительность",
+      "amount": "Сумма",
+      "paymentMethod": "Способ оплаты",
+      "renewalType": "Тип продления",
+      "classLimit": "Лимит занятий",
+      "classes": "занятия",
+      "free": "Бесплатно"
+    },
+    "notifications": {
+      "pushNotifications": "Push-уведомления",
+      "pushNotificationsDesc": "Получать push-уведомления на вашем устройстве",
+      "emailNotifications": "Email уведомления",
+      "emailNotificationsDesc": "Получать обновления и объявления по email",
+      "emailAlerts": "Email оповещения",
+      "emailAlertsDesc": "Получать уведомления по электронной почте",
+      "smsAlerts": "SMS оповещения",
+      "smsAlertsDesc": "Получать важные обновления через SMS",
+      "classReminders": "Напоминания о занятиях",
+      "classRemindersDesc": "Получать уведомления перед запланированными занятиями",
+      "languageNote": "Изменения языка сохраняются автоматически - не нужно нажимать \"Сохранить настройки\"",
+      "languageLocalization": "Язык и локализация"
+    }
   },
   "announcements": {
     "title": "Объявления",
