--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -322,5 +322,47 @@
     "notFound": "Resource not found.",
     "serverError": "Server error. Please try again later.",
     "validationError": "Please check your input and try again."
+  },
+  "admin": {
+    "membership": {
+      "title": "Membership Manager",
+      "plans": "Plans",
+      "subscriptions": "Subscriptions",
+      "companies": "Companies",
+      "createNewPlan": "Create New Plan",
+      "addSubscription": "Add Subscription",
+      "createCompany": "Create Company",
+      "mostPopular": "Most Popular",
+      "entryLimit": "Entry Limit",
+      "entries": "entries",
+      "unlimited": "Unlimited",
+      "edit": "Edit",
+      "activate": "Activate",
+      "deactivate": "Deactivate",
+      "delete": "Delete",
+      "renew": "Renew",
+      "suspend": "Suspend",
+      "cancel": "Cancel",
+      "name": "Name",
+      "email": "Email",
+      "company": "Company",
+      "plan": "Plan",
+      "totalVisits": "Total Visits",
+      "remainingVisits": "Remaining Visits",
+      "usedVisits": "Used Visits",
+      "nextPayment": "Next Payment",
+      "daysRemaining": "Days Remaining",
+      "searchPlaceholder": "Search {{tab}}...",
+      "off": "OFF",
+      "daysLeft": "{{count}} days left",
+      "expired": "EXPIRED",
+      "contact": "Contact",
+      "phone": "Phone",
+      "address": "Address",
+      "discount": "Discount",
+      "employees": "Employees",
+      "activeSubs": "Active Subs",
+      "contract": "Contract"
+    }
   }
 }
