--- a/frontend/public/locales/ru/translation.json
+++ b/frontend/public/locales/ru/translation.json
@@ -317,10 +317,52 @@
   },
   "errors": {
     "genericError": "Что-то пошло не так. Пожалуйста, попробуйте снова.",
-    "networkError": "Ошибка сети. Пожалуйста, проверьте соединение.",
-    "unauthorized": "Неавторизован. Пожалуйста, войдите в систему.",
+    "networkError": "Ошибка сети. Пожалуйста, проверьте подключение.",
+    "unauthorized": "Неавторизован. Пожалуйста, войдите.",
     "notFound": "Ресурс не найден.",
     "serverError": "Ошибка сервера. Пожалуйста, попробуйте позже.",
-    "validationError": "Пожалуйста, проверьте введенные данные и попробуйте снова."
+    "validationError": "Пожалуйста, проверьте ваши данные и попробуйте снова."
+  },
+  "admin": {
+    "membership": {
+      "title": "Управление членством",
+      "plans": "Планы",
+      "subscriptions": "Подписки",
+      "companies": "Компании",
+      "createNewPlan": "Создать новый план",
+      "addSubscription": "Добавить подписку",
+      "createCompany": "Создать компанию",
+      "mostPopular": "Самый популярный",
+      "entryLimit": "Лимит посещений",
+      "entries": "посещения",
+      "unlimited": "Неограниченно",
+      "edit": "Редактировать",
+      "activate": "Активировать",
+      "deactivate": "Деактивировать",
+      "delete": "Удалить",
+      "renew": "Продлить",
+      "suspend": "Приостановить",
+      "cancel": "Отменить",
+      "name": "Имя",
+      "email": "Email",
+      "company": "Компания",
+      "plan": "План",
+      "totalVisits": "Всего посещений",
+      "remainingVisits": "Осталось посещений",
+      "usedVisits": "Использовано посещений",
+      "nextPayment": "Следующий платеж",
+      "daysRemaining": "Осталось дней",
+      "searchPlaceholder": "Поиск {{tab}}...",
+      "off": "СКИДКА",
+      "daysLeft": "осталось {{count}} дней",
+      "expired": "ИСТЕК",
+      "contact": "Контакт",
+      "phone": "Телефон",
+      "address": "Адрес",
+      "discount": "Скидка",
+      "employees": "Сотрудники",
+      "activeSubs": "Активные подписки",
+      "contract": "Контракт"
+    }
   }
 }
