feat(i18n): complete admin MembershipManager translation - Phase 3 100%
- Added 45 modal translation keys × 3 languages = 135 new translations
- Completed all modal forms translation:
  * Create/Edit Plan Modal: title, labels, placeholders, options, buttons
  * Create Company Modal: all form fields and save button
  * Edit Subscription Modal: dates, status, remaining visits
- Translated Access Denied message
- Total admin namespace: 87 keys × 3 languages = 261 translations
- Component 100% translated: Plans, Subscriptions, Companies tabs + all modals
- Both Reception & Sparta roles fully multilingual
- Zero JSON errors, zero breaking changes
- Ready for production testing

--- a/frontend/public/locales/az/translation.json
+++ b/frontend/public/locales/az/translation.json
@@ -362,7 +362,53 @@
       "discount": "Endirim",
       "employees": "İşçilər",
       "activeSubs": "Aktiv Abunələr",
-      "contract": "Müqavilə"
+      "contract": "Müqavilə",
+      "editPlan": "Planı Redaktə Et",
+      "createPlan": "Yeni Üzvlük Planı Yarat",
+      "editSubscription": "Abunəliyi Redaktə Et",
+      "createSubscription": "Yeni Abunəlik Əlavə Et",
+      "editCompany": "Şirkəti Redaktə Et",
+      "planName": "Plan Adı",
+      "planType": "Plan Növü",
+      "price": "Qiymət",
+      "description": "Təsvir",
+      "duration": "Müddət",
+      "features": "Xüsusiyyətlər",
+      "addFeature": "Xüsusiyyət Əlavə Et",
+      "limitations": "Məhdudiyyətlər",
+      "addLimitation": "Məhdudiyyət Əlavə Et",
+      "activePlan": "Aktiv Plan",
+      "markPopular": "Populyar Kimi İşarələ",
+      "discountPercentage": "Endirim Faizi",
+      "savePlan": "Planı Saxla",
+      "saveSubscription": "Abunəliyi Saxla",
+      "saveCompany": "Şirkəti Saxla",
+      "close": "Bağla",
+      "required": "Tələb olunur",
+      "singleEntry": "Tək Giriş",
+      "monthlyLimited": "Aylıq Məhdud",
+      "monthlyUnlimited": "Aylıq Limitsiz",
+      "companyPlan": "Şirkət Planı",
+      "planNamePlaceholder": "məs., Premium Aylıq, Tək Giriş",
+      "descriptionPlaceholder": "Bu planın qısa təsviri",
+      "entryLimitPlaceholder": "İcazə verilən idman zalı ziyarətlərinin sayı",
+      "durationPlaceholder": "məs., 30 gün, 1 ay, 1 il",
+      "member": "Üzv",
+      "selectMember": "Üzv seçin",
+      "selectPlan": "Plan seçin",
+      "startDate": "Başlama Tarixi",
+      "endDate": "Bitmə Tarixi",
+      "ongoing": "Davam edən",
+      "ongoingNoEndDate": "Davam edən (Bitmə Tarixi Yoxdur)",
+      "paymentStatus": "Ödəniş Statusu",
+      "companyName": "Şirkət Adı",
+      "contactPerson": "Əlaqə Şəxsi",
+      "contractStart": "Müqavilənin Başlanma Tarixi",
+      "contractEnd": "Müqavilənin Bitmə Tarixi",
+      "employeeCount": "İşçi Sayı",
+      "accessDenied": "Giriş Qadağandır",
+      "noPermission": "Üzvlük İdarəçiliyinə giriş icazəniz yoxdur.",
+      "contactAdmin": "Bunun səhv olduğunu düşünürsünüzsə, administratorla əlaqə saxlayın."
     }
   }
 }
