--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -362,7 +362,53 @@
       "discount": "Discount",
       "employees": "Employees",
       "activeSubs": "Active Subs",
-      "contract": "Contract"
+      "contract": "Contract",
+      "editPlan": "Edit Membership Plan",
+      "createPlan": "Create New Membership Plan",
+      "editSubscription": "Edit Subscription",
+      "createSubscription": "Add New Subscription",
+      "editCompany": "Edit Company",
+      "planName": "Plan Name",
+      "planType": "Plan Type",
+      "price": "Price",
+      "description": "Description",
+      "duration": "Duration",
+      "features": "Features",
+      "addFeature": "Add Feature",
+      "limitations": "Limitations",
+      "addLimitation": "Add Limitation",
+      "activePlan": "Active Plan",
+      "markPopular": "Mark as Popular",
+      "discountPercentage": "Discount Percentage",
+      "savePlan": "Save Plan",
+      "saveSubscription": "Save Subscription",
+      "saveCompany": "Save Company",
+      "close": "Close",
+      "required": "Required",
+      "singleEntry": "Single Entry",
+      "monthlyLimited": "Monthly Limited",
+      "monthlyUnlimited": "Monthly Unlimited",
+      "companyPlan": "Company Plan",
+      "planNamePlaceholder": "e.g., Premium Monthly, Single Entry",
+      "descriptionPlaceholder": "Brief description of this plan",
+      "entryLimitPlaceholder": "Number of gym visits allowed",
+      "durationPlaceholder": "e.g., 30 days, 1 month, 1 year",
+      "member": "Member",
+      "selectMember": "Select a member",
+      "selectPlan": "Select a plan",
+      "startDate": "Start Date",
+      "endDate": "End Date",
+      "ongoing": "Ongoing",
+      "ongoingNoEndDate": "Ongoing (No End Date)",
+      "paymentStatus": "Payment Status",
+      "companyName": "Company Name",
+      "contactPerson": "Contact Person",
+      "contractStart": "Contract Start Date",
+      "contractEnd": "Contract End Date",
+      "employeeCount": "Employee Count",
+      "accessDenied": "Access Denied",
+      "noPermission": "You don't have permission to access Membership Manager.",
+      "contactAdmin": "Please contact your administrator if you believe this is an error."
     }
   }
 }
