--- a/frontend/public/locales/ru/translation.json
+++ b/frontend/public/locales/ru/translation.json
@@ -362,7 +362,53 @@
       "discount": "Скидка",
       "employees": "Сотрудники",
       "activeSubs": "Активные подписки",
-      "contract": "Контракт"
+      "contract": "Контракт",
+      "editPlan": "Редактировать план членства",
+      "createPlan": "Создать новый план членства",
+      "editSubscription": "Редактировать подписку",
+      "createSubscription": "Добавить новую подписку",
+      "editCompany": "Редактировать компанию",
+      "planName": "Название плана",
+      "planType": "Тип плана",
+      "price": "Цена",
+      "description": "Описание",
+      "duration": "Длительность",
+      "features": "Особенности",
+      "addFeature": "Добавить особенность",
+      "limitations": "Ограничения",
+      "addLimitation": "Добавить ограничение",
+      "activePlan": "Активный план",
+      "markPopular": "Отметить как популярный",
+      "discountPercentage": "Процент скидки",
+      "savePlan": "Сохранить план",
+      "saveSubscription": "Сохранить подписку",
+      "saveCompany": "Сохранить компанию",
+      "close": "Закрыть",
+      "required": "Обязательно",
+      "singleEntry": "Разовое посещение",
+      "monthlyLimited": "Месячный ограниченный",
+      "monthlyUnlimited": "Месячный безлимитный",
+      "companyPlan": "Корпоративный план",
+      "planNamePlaceholder": "напр., Премиум месячный, Разовое посещение",
+      "descriptionPlaceholder": "Краткое описание этого плана",
+      "entryLimitPlaceholder": "Количество разрешенных посещений",
+      "durationPlaceholder": "напр., 30 дней, 1 месяц, 1 год",
+      "member": "Член",
+      "selectMember": "Выберите члена",
+      "selectPlan": "Выберите план",
+      "startDate": "Дата начала",
+      "endDate": "Дата окончания",
+      "ongoing": "Продолжается",
+      "ongoingNoEndDate": "Продолжается (без даты окончания)",
+      "paymentStatus": "Статус оплаты",
+      "companyName": "Название компании",
+      "contactPerson": "Контактное лицо",
+      "contractStart": "Дата начала контракта",
+      "contractEnd": "Дата окончания контракта",
+      "employeeCount": "Количество сотрудников",
+      "accessDenied": "Доступ запрещен",
+      "noPermission": "У вас нет разрешения на доступ к управлению членством.",
+      "contactAdmin": "Пожалуйста, свяжитесь с администратором, если вы считаете, что это ошибка."
     }
   }
 }
