--- a/frontend/public/locales/ru/translation.json
+++ b/frontend/public/locales/ru/translation.json
@@ -409,6 +409,41 @@
       "accessDenied": "Доступ запрещен",
       "noPermission": "У вас нет разрешения на доступ к управлению членством.",
       "contactAdmin": "Пожалуйста, свяжитесь с администратором, если вы считаете, что это ошибка."
+    },
+    "reception": {
+      "title": "Панель ресепшн",
+      "subtitle": "Эффективно управляйте операциями спортзала",
+      "scanQR": "Сканировать QR члена",
+      "scanQRSubtitle": "Быстрая регистрация членов",
+      "totalMembers": "Всего членов",
+      "checkedInToday": "Зарегистрировано сегодня",
+      "instructors": "Инструкторы",
+      "activeClasses": "Активные занятия",
+      "expiringSoon": "Скоро истекает (7 дней)",
+      "upcomingBirthdays": "Предстоящие дни рождения",
+      "memberManagement": "Управление членами",
+      "memberManagementDesc": "Добавляйте, обновляйте и управляйте профилями членов",
+      "checkInHistory": "История регистраций",
+      "checkInHistoryDesc": "Просмотр и анализ данных о регистрациях",
+      "classManagement": "Управление занятиями",
+      "classManagementDesc": "Назначайте инструкторов и управляйте расписанием",
+      "announcements": "Объявления",
+      "announcementsDesc": "Отправляйте уведомления всем членам",
+      "membershipPlans": "Планы членства",
+      "membershipPlansDesc": "Управление планами подписки и ценами",
+      "birthdaysCard": "Предстоящие дни рождения",
+      "birthdaysCardDesc": "Отмечайте особые дни членов",
+      "members": "Члены",
+      "today": "Сегодня",
+      "active": "Активные",
+      "plans": "Планы",
+      "new": "Новое",
+      "recentActivity": "Недавняя активность",
+      "viewAll": "Просмотреть все"
+    },
+    "sparta": {
+      "title": "Панель Sparta",
+      "subtitle": "Полный контроль и управление системой"
     }
   }
 }
